refactoring top 100 datatable

--- a/src/app/components/top100leaderboard/top100leaderboard.component.css
+++ b/src/app/components/top100leaderboard/top100leaderboard.component.css
@@ -175,3 +175,11 @@ th {
   color: red;
 }
 
+.deadCharRow {
+  background-color: red!important;
+  color: red!important;
+  border: 1px while solid !important;;
+  font-style: italic;  
+  
+}
+
