--- a/src/app/components/top100leaderboard/top100leaderboard.component.html
+++ b/src/app/components/top100leaderboard/top100leaderboard.component.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="card-body">
                   <div class="table-responsive">
-                    <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions">
+                    <table class="table table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions">
                       <thead>
                         <tr>
                           <th>&nbsp;#</th>
@@ -27,35 +27,43 @@
                           <th>&nbsp;Character</th>
                           <th></th>
                           <th>&nbsp;Ascendancy</th>
-                          <th *ngIf="delveLeaderboard[0].leaderboard === 'Top Race to 100'">&nbsp;Level  </th>
-                          <th *ngIf="delveLeaderboard[0].leaderboard === 'Top Race to 100'">&nbsp;Level Progress </th>
-                          <th *ngIf="delveLeaderboard[0].leaderboard === 'Top Race to 100'">&nbsp;XP/PH </th>
-                          <th *ngIf="delveLeaderboard[0].leaderboard === 'Top Race to 100'">&nbsp;Experience </th>
+                          <ng-container *ngIf="delveLeaderboard[0].leaderboard === 'Top Race to 100'">     
+                            <th>&nbsp;Level  </th>
+                            <th>&nbsp;Level Progress </th>
+                            <th>&nbsp;XP/PH </th>
+                            <th>&nbsp;Experience </th>
+                          </ng-container>
                           <th *ngIf="delveLeaderboard[0].leaderboard === 'Top Delve Depths'">&nbsp;Depth  </th>
                           <th *ngIf="delveLeaderboard[0].leaderboard === 'Top UberLab Times'">&nbsp;Time  </th>
                         </tr>
                       </thead>
-                      <tbody>
-                        <tr *ngFor="let entry of delveLeaderboard">
-                          <td>{{entry.rank}}</td>
-                          <td *ngIf="entry.rankDifference.includes('-')"><span class='arrow-down'></span>  ({{entry.rankDifference}})</td>
-                          <td *ngIf="entry.rankDifference.includes('+')"><span class='arrow-up'></span>  ({{entry.rankDifference}})</td>
-                          <td *ngIf="entry.rankDifference == '0'"></td> 
-                          <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{entry.account}}</td>
-                          <td>{{entry.character}} <i *ngIf="isDead(entry.dead)" id="isDead">(dead)</i></td>
-                          <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
-                          <td>{{entry.ascendancy}}</td>
-                          <td *ngIf="delveLeaderboard[0].leaderboard === 'Top Race to 100'">&nbsp;{{entry.level}}</td>
-                          <td *ngIf="delveLeaderboard[0].leaderboard === 'Top Race to 100'">
-                            <div class="progress">
-                              <div class="progress-bar bg-dark" role="progressbar" [ngStyle]="{ 'width': entry.progress }"> </div>
-                            </div>
-                          </td>
-                          <td *ngIf="delveLeaderboard[0].leaderboard === 'Top Race to 100'" [ngStyle]="{'color': getXpphFontColor(entry.experienceDifference)}">&nbsp;{{entry.experienceDifference}}</td>
-                          <td *ngIf="delveLeaderboard[0].leaderboard === 'Top Race to 100'">&nbsp;{{entry.experience}}</td>
-                          <td *ngIf="delveLeaderboard[0].leaderboard === 'Top Delve Depths'">&nbsp;{{entry.depth}}</td>
-                          <td *ngIf="delveLeaderboard[0].leaderboard === 'Top UberLab Times'">&nbsp;{{entry.timeFormatted}}</td>
-                        </tr>
+                      <tbody>   
+                        <ng-container *ngFor="let entry of delveLeaderboard">                      
+                          <tr>
+                            <td>{{entry.rank}}</td>
+                            <td *ngIf="entry.rankDifference.includes('-')"><span class='arrow-down'></span>  ({{entry.rankDifference}})</td>
+                            <td *ngIf="entry.rankDifference.includes('+')"><span class='arrow-up'></span>  ({{entry.rankDifference}})</td>
+                            <td *ngIf="entry.rankDifference == '0'"></td> 
+                            <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{entry.account}}</td>
+                            <td>{{entry.character}} <i *ngIf="isDead(entry.dead)" id="isDead">(dead)</i></td>
+                            <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
+                            <td>{{entry.ascendancy}}</td>
+
+                            <ng-container *ngIf="delveLeaderboard[0].leaderboard === 'Top Race to 100'">     
+                              <td>&nbsp;{{entry.level}}</td>
+                              <td>
+                                <div class="progress">
+                                  <div class="progress-bar bg-dark" role="progressbar" [ngStyle]="{ 'width': entry.progress }"> </div>
+                                </div>
+                              </td>
+                              <td [ngStyle]="{'color': getXpphFontColor(entry.experienceDifference)}">&nbsp;{{entry.experienceDifference}}</td>
+                              <td>&nbsp;{{entry.experience}}</td>
+                            </ng-container>
+
+                            <td *ngIf="delveLeaderboard[0].leaderboard === 'Top Delve Depths'">&nbsp;{{entry.depth}}</td>
+                            <td *ngIf="delveLeaderboard[0].leaderboard === 'Top UberLab Times'">&nbsp;{{entry.timeFormatted}}</td>
+                          </tr>
+                      </ng-container>
                       </tbody>
                     </table>
                   </div>
@@ -65,7 +73,6 @@
           </div>
         </div>
       </div>
-
     </div>
   </div>
 
