--- a/src/app/components/top100leaderboard/top100leaderboard.component.html
+++ b/src/app/components/top100leaderboard/top100leaderboard.component.html
@@ -43,7 +43,7 @@
                             <td>{{entry.rank}}</td>
                             <td *ngIf="entry.rankDifference.includes('-')"><span class='arrow-down'></span>  ({{entry.rankDifference}})</td>
                             <td *ngIf="entry.rankDifference.includes('+')"><span class='arrow-up'></span>  ({{entry.rankDifference}})</td>
-                            <td *ngIf="entry.rankDifference == '0'"></td> 
+                            <td *ngIf="entry.rankDifference === '0'"></td> 
                             <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{entry.account}}</td>
                             <td>{{entry.character}} <i *ngIf="isDead(entry.dead)" id="isDead">(dead)</i></td>
                             <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
